[package]
name = "atctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "CLI/TUI AT command controller for USB cellular modems"
license = "MIT"
repository = "https://github.com/uchimanajet7/atctl"
readme = "README.md"
keywords = ["at-command", "modem", "cellular", "tui", "usb"]
categories = ["command-line-utilities"]
include = [
    "/src/**",
    "/examples/presets/**",
    "/examples/sequences/**",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
crossterm = "0.29.0"
portable-pty = "0.9"
ratatui = "0.30.2"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
